# eigsep_terrain

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
eigsep_terrain/: __init__.py  dem.py  img.py  marjum_dem.py  plot.py  ray.py  ray_jax.py  ray_numba.py  reflectivity.py  seg.py  utils.py
eigsep_terrain/tests/: test_dem.py  test_jax.py  test_numba.py  test_ray.py  test_utils.py
notebooks/: EIGSEP Horizons.ipynb  EIGSEP Image Fit.ipynb  EIGSEP Suspension and Horizon Modeling.ipynb  S11_eigsep_bowtie_oct25.npz  short_pymc_checkpoint.nc  slightly_larger_pymc_checkpoint.nc  terrain_s11.ipynb
scripts/: eigsep_terrain_plot_nc.py  eigsep_terrain_pymc.py
