[project]
name = "eigsep-terrain"
description = "Digital Elevation Model tools for EIGSEP"
version = "0.1.0"
license = "MIT"
authors = [{ name = "Aaron Parsons" }]
readme = "README.md"
dependencies = [
  "numpy",
  "pymc",
  "arviz",
  "pytensor",
]

[project.optional-dependencies]
numba = ["numba"]

[tool.setuptools]
script-files = ["scripts/eigsep_terrain_pymc.py"]
include-package-data = true

[tool.black]
line-length = 79

[tool.setuptools.packages.find]
where = ["."]
include = ["eigsep_terrain*"]
exclude = ["notebooks*", "tests*"]
