[metadata]
name = eigsep_terrain
version = 0.0.1
description = Calculate EIGSEP horizons, etc.
url = https://github.com/EIGSEP/eigsep_terrain
author = Aaron Parsons
author_email = aparsons@berkeley.edu

[options]
python_requires = >= 3.9
packages = find:
include_package_data = True


[flake8]
ignore = E203, W503
per-file-ignores =
    __init__.py:F401
max-line-length = 79
